--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     ],
     "rules": {
         "@typescript-eslint/no-non-null-assertion": "off",
-        "@typescript-eslint/strict-boolean-expressions": "off"
+        "@typescript-eslint/strict-boolean-expressions": "off",
+        "@typescript-eslint/restrict-template-expressions": "off"
     }
 }
