--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/react-dom": "^18.0.2",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
