--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,5 +23,10 @@
         "@typescript-eslint/strict-boolean-expressions": "off",
         "@typescript-eslint/restrict-template-expressions": "off",
         "@typescript-eslint/no-floating-promises": "off"
+    },
+    "settings": {
+        "react": {
+         "version": "detect"
+        }
     }
 }
