--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll=false",
+    "test": "react-scripts test  --watchAll=false",
     "eject": "react-scripts eject",
     "lint-staged": "lint-staged"
   },
@@ -55,6 +55,9 @@
       "last 1 safari version"
     ]
   },
+  "jest": {
+    "transformIgnorePatterns": ["node_modules\/(?!axios)"]
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "eslint": "^8.0.1",
@@ -65,6 +68,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
+    "jest": "^29.5.0",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.6"
   },
